--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,285 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"/>
+
+    tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"
+        android:text="Pick up from"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        android:id="@+id/t1"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/t1"
+        android:text=" location"
+        android:textSize="23dp"
+        android:id="@+id/t2"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+
+        android:drawableLeft="@drawable/location_pin"
+        />
+     <androidx.appcompat.widget.SearchView
+         android:id="@+id/search"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_margin="15dp"
+         android:layout_below="@id/t2"
+         app:queryHint="Search for NGO's"
+         android:background="@drawable/search_view"
+         app:iconifiedByDefault="false"
+
+         />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search"
+        app:cardBackgroundColor="#92E4DB"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="10dp"
+        android:id="@+id/card"
+
+
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="170dp"
+            android:orientation="vertical"
+            android:background="@drawable/card_bck1"
+            android:alpha="0.7"
+            android:paddingStart="3dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hey User,"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textStyle="bold"
+                android:textSize="25dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="20sp"
+                android:textColor="@color/black"
+
+             />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Do you want to help the community by donating unused food? "
+                android:fontFamily="sans-serif-medium"
+                android:layout_marginTop="3dp"
+                android:layout_marginStart="5dp"
+                android:textSize="16dp"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/black"
+                android:padding="@dimen/material_emphasis_medium"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="10dp"
+                android:text="Donate Now"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:backgroundTint="#053538"
+                android:fontFamily="sans-serif-condensed-light"
+                />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card"
+        android:text="Top Donors of the month"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif"
+        android:id="@+id/top_donor"
+        />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="60dp"
+        android:layout_height="70dp"
+        android:src="@drawable/bck"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginRight="20dp"
+        />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:layout_below="@id/top_donor">
+
+       <HorizontalScrollView
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/horizontal_scroll_view"
+           android:layout_marginTop="7dp"
+           android:layout_marginStart="18dp"
+
+           >
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:orientation="horizontal">
+
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:src="@drawable/bck"
+                   android:layout_marginStart="0dp"
+                   android:scaleType="centerCrop">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:src="@drawable/bck"
+                   android:layout_marginStart="15dp"
+                   android:scaleType="centerCrop">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:src="@drawable/bck"
+                   android:layout_marginStart="15dp"
+                   android:scaleType="centerCrop">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:src="@drawable/bck"
+                   android:layout_marginStart="15dp"
+                   android:scaleType="centerCrop">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:layout_marginStart="15dp"
+                   android:scaleType="centerCrop"
+                   android:src="@drawable/bck">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+
+               <de.hdodenhof.circleimageview.CircleImageView
+                   android:layout_width="60dp"
+                   android:layout_height="70dp"
+                   android:src="@drawable/bck"
+                   android:layout_marginStart="20dp"
+                   android:scaleType="centerCrop">
+
+               </de.hdodenhof.circleimageview.CircleImageView>
+           </LinearLayout>
+       </HorizontalScrollView>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Featured Organizations"
+           android:textStyle="bold"
+           android:textSize="22dp"
+           android:layout_marginTop="7dp"
+           android:layout_marginStart="20dp"
+           android:fontFamily="sans-serif"
+
+           />
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="20dp"
+        app:cardCornerRadius="10dp"
+        app:cardBackgroundColor="@color/white"
+        android:id="@+id/card_1"
+        >
+        <LinearLayout
+           android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bck">
+
+            </de.hdodenhof.circleimageview.CircleImageView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="19dp"
+                    android:text="Feeding India"
+                    android:textStyle="bold"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="15dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Feeding India, a Zomato giveback, is a not for profit organization, designing interventions to reduce hunger among underserved communities in India."
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="0dp"
+
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"
+                    android:text="Donate"
+                    android:layout_marginStart="15dp"
+                    android:textColor="@color/l_primary"
+                    android:textStyle="bold"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:drawableRight="@drawable/arrow_right_2"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+
+
+</ScrollView>
+   </LinearLayout>
+
+</RelativeLayout>
+
