--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,6 @@
                 android:textSize="16dp"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/black"
-                android:padding="@dimen/material_emphasis_medium"
                 />
             <Button
                 android:layout_width="match_parent"
@@ -118,11 +117,10 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="60dp"
         android:layout_height="70dp"
-        android:src="@drawable/bck"
         android:layout_alignParentRight="true"
         android:layout_marginTop="18dp"
         android:layout_marginRight="20dp"
-        />
+        android:src="@drawable/p1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
@@ -135,6 +133,7 @@
            android:id="@+id/horizontal_scroll_view"
            android:layout_marginTop="7dp"
            android:layout_marginStart="18dp"
+           android:contentDescription="horizontal_view"
 
            >
            <LinearLayout
@@ -145,7 +144,7 @@
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
-                   android:src="@drawable/bck"
+                   android:src="@drawable/p2"
                    android:layout_marginStart="0dp"
                    android:scaleType="centerCrop">
 
@@ -153,7 +152,7 @@
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
-                   android:src="@drawable/bck"
+                   android:src="@drawable/p3"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop">
 
@@ -161,7 +160,7 @@
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
-                   android:src="@drawable/bck"
+                   android:src="@drawable/p4"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop">
 
@@ -169,7 +168,7 @@
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
-                   android:src="@drawable/bck"
+                   android:src="@drawable/p5"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop">
 
@@ -180,14 +179,14 @@
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:scaleType="centerCrop"
-                   android:src="@drawable/bck">
+                   android:src="@drawable/p6">
 
                </de.hdodenhof.circleimageview.CircleImageView>
 
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="70dp"
-                   android:src="@drawable/bck"
+                   android:src="@drawable/p1"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop">
 
@@ -212,6 +211,11 @@
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
 >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -232,7 +236,7 @@
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/bck">
+                android:src="@drawable/ngo_1">
 
             </de.hdodenhof.circleimageview.CircleImageView>
             <LinearLayout
@@ -274,10 +278,136 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="20dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/white"
+            android:id="@+id/card_2"
+            android:layout_marginTop="15dp"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ngo_1">
+
+                </de.hdodenhof.circleimageview.CircleImageView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="19dp"
+                        android:text="Feeding India"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="15dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Feeding India, a Zomato giveback, is a not for profit organization, designing interventions to reduce hunger among underserved communities in India."
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="0dp"
+
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18dp"
+                        android:text="Donate"
+                        android:layout_marginStart="15dp"
+                        android:textColor="@color/l_primary"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:drawableRight="@drawable/arrow_right_2"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="20dp"
+            app:cardCornerRadius="10dp"
+            app:cardBackgroundColor="@color/white"
+            android:id="@+id/card_3"
+            android:layout_marginTop="15dp"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="15dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ngo_1">
+
+                </de.hdodenhof.circleimageview.CircleImageView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="19dp"
+                        android:text="Feeding India"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="15dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Feeding India, a Zomato giveback, is a not for profit organization, designing interventions to reduce hunger among underserved communities in India."
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="0dp"
+
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18dp"
+                        android:text="Donate"
+                        android:layout_marginStart="15dp"
+                        android:textColor="@color/l_primary"
+                        android:textStyle="bold"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:drawableRight="@drawable/arrow_right_2"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
 
 
+    </LinearLayout>
 </ScrollView>
    </LinearLayout>
 
