--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginStart="10dp"
         android:text="Pick up from"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/black"
         android:id="@+id/t1"/>
     <TextView
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/t1"
         android:text=" location"
-        android:textSize="23dp"
+        android:textSize="23sp"
         android:id="@+id/t2"
         android:layout_marginStart="5dp"
         android:textColor="@color/black"
@@ -69,7 +69,7 @@
                 android:text="Hey User,"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textStyle="bold"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_marginStart="6dp"
                 android:layout_marginTop="20sp"
                 android:textColor="@color/black"
@@ -82,7 +82,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:layout_marginTop="3dp"
                 android:layout_marginStart="5dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/black"
                 />
@@ -94,7 +94,7 @@
                 android:text="Donate Now"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:backgroundTint="#053538"
                 android:fontFamily="sans-serif-condensed-light"
                 />
@@ -108,7 +108,7 @@
         android:text="Top Donors of the month"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textStyle="bold"
         android:fontFamily="sans-serif"
         android:id="@+id/top_donor"
@@ -198,7 +198,7 @@
            android:layout_height="wrap_content"
            android:text="Featured Organizations"
            android:textStyle="bold"
-           android:textSize="22dp"
+           android:textSize="22sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="20dp"
            android:fontFamily="sans-serif"
@@ -248,17 +248,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="19dp"
-                    android:text="Feeding India"
-                    android:textStyle="bold"
-                    android:layout_marginTop="5dp"
                     android:layout_marginStart="15dp"
-                    />
+                    android:layout_marginTop="5dp"
+                    android:text="Feeding India"
+                    android:textSize="19sp"
+                    android:textStyle="bold" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Feeding India, a Zomato giveback, is a not for profit organization, designing interventions to reduce hunger among underserved communities in India."
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="15sp"
                     android:layout_marginTop="0dp"
 
                     />
@@ -311,7 +310,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="19dp"
+                        android:textSize="19sp"
                         android:text="Feeding India"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
@@ -328,7 +327,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:text="Donate"
                         android:layout_marginStart="15dp"
                         android:textColor="@color/l_primary"
@@ -374,7 +373,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="19dp"
+                        android:textSize="19sp"
                         android:text="Feeding India"
                         android:textStyle="bold"
                         android:layout_marginTop="5dp"
@@ -391,7 +390,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="18dp"
+                        android:textSize="18sp"
                         android:text="Donate"
                         android:layout_marginStart="15dp"
                         android:textColor="@color/l_primary"
