--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
             android:orientation="vertical"
             android:background="@drawable/card_bck1"
             android:alpha="0.7"
-            android:paddingStart="3dp"
+
             >
             <TextView
                 android:layout_width="wrap_content"
@@ -137,7 +137,7 @@
 
            >
            <LinearLayout
-               android:layout_width="match_parent"
+               android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
 
