--- a/app/src/main/res/layout/activity_register_login.xml
+++ b/app/src/main/res/layout/activity_register_login.xml
@@ -72,7 +72,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="20dp"
                 android:text="LOG IN"
-                android:textSize="22dp"
+                android:textSize="22sp"
                 android:textColor="@color/white"
                 android:fontFamily="sans-serif-condensed-medium"
                 android:id = "@+id/btn"/>
