--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,7 +7,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -54,8 +54,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/input_backgrd"
-            android:drawableLeft="@drawable/restaurant"
+            android:background="@drawable/input_backgrd1"
+            android:drawableLeft="@drawable/restaurant1"
             android:drawablePadding="5dp"
             android:drawableTint="@color/white"
             android:hint="Name"
@@ -78,8 +78,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/input_backgrd"
-            android:drawableLeft="@drawable/location_on"
+            android:background="@drawable/input_backgrd1"
+            android:drawableLeft="@drawable/location_on1"
             android:drawablePadding="5dp"
             android:drawableTint="@color/white"
             android:textColor="@color/white"
@@ -102,8 +102,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/input_backgrd"
-            android:drawableLeft="@drawable/phone"
+            android:background="@drawable/input_backgrd1"
+            android:drawableLeft="@drawable/phone1"
             android:drawablePadding="5dp"
             android:drawableTint="@color/white"
             android:textColor="@color/white"
@@ -126,8 +126,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/input_backgrd"
-            android:drawableLeft="@drawable/email"
+            android:background="@drawable/input_backgrd1"
+            android:drawableLeft="@drawable/email1"
             android:drawablePadding="5dp"
             android:drawableTint="@color/white"
             android:textColor="@color/white"
@@ -150,7 +150,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
-            android:background="@drawable/input_backgrd"
+            android:background="@drawable/input_backgrd1"
             android:drawableLeft="@drawable/password"
             android:drawablePadding="5dp"
             android:drawableTint="@color/white"
